src/test/deca/syntax/valid/provided/hello-lex.corr
OBRACE: [@0,135:135='{',<14>,10:0]
PRINTLN: [@1,145:151='println',<37>,11:8]
OPARENT: [@2,152:152='(',<12>,11:15]
STRING: [@3,153:159='"Hello"',<49>,11:16]
CPARENT: [@4,160:160=')',<13>,11:23]
SEMI: [@5,161:161=';',<17>,11:24]
CBRACE: [@6,163:163='}',<15>,12:0]
