src/test/deca/syntax/invalid/provided/simple_lex-lex.corr
IDENT: [@0,204:206='idf',<47>,11:0]
IDENT: [@1,208:217='_autre_idf',<47>,11:4]
OBRACE: [@2,219:219='{',<14>,12:0]
CBRACE: [@3,221:221='}',<15>,13:0]
OPARENT: [@4,223:223='(',<12>,14:0]
CPARENT: [@5,225:225=')',<13>,15:0]
